--- a/views/css/style.css
+++ b/views/css/style.css
@@ -44,7 +44,7 @@ body {
   height: 80px;
   left: 0px;
 }
-#rpmDiv {
+#TachDiv {
   color: #FFFFFF;
   position: absolute;
   margin-top:45px;
@@ -53,7 +53,7 @@ body {
   text-align: right;
   width: 135px;
 }
-#rpmLabelDiv {
+#TachLabelDiv {
   color: #FFFFFF;
   position: absolute;
   margin-top: 45px;
