--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
     <title>MQTT Dash</title>
     <!-- JQuery -->
     <script src="/js/jquery-1.11.3.min.js" type="text/javascript"></script>
+
     <script src="/js/jquery-ui.min.js" type="text/javascript"></script>
     <!-- Google Maps -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js" type="text/javascript"></script>
+  <!--  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js" type="text/javascript"></script> -->
     <!-- Google Fonts Orbitron-->
     <link href="/css/font.css" rel="stylesheet">
     <!-- Spin.js -->
@@ -22,8 +23,8 @@
       <!-- TACHO -->
        <div id="barTach">
         <div id="barTachMarker"></div>
-        <div id="rpmDiv">00000</div>
-        <div id="rpmLabelDiv">RPM</div>
+        <div id="TachDiv">00000</div>
+        <div id="TachLabelDiv">RPM</div>
       </div>
       <!-- SPEED -->
       <div id="barSpeed">
@@ -34,8 +35,8 @@
       <!-- TEMP -->
       <div id="barTemp">
         <div id="barTempMarker"></div>
-        <div id="tempDiv">000</div>
-        <div id="tempLabelDiv">°C</div>
+        <div id="TempDiv">000</div>
+        <div id="TempLabelDiv">°C</div>
       </div>
       <!-- HORNET LOGO -->
       <div id="logoDiv">
@@ -43,10 +44,10 @@
       </div>
       <!-- CLOCK -->
       <div id="clock"> </div>
-
-
     </div>
-    <!-- Panel 2: Map Dash -->
+
+<!--
+    <!-- Panel 2: Map Dash --
     <div id="panel2" style="display: none;">
       <div id="map-canvas"/></div>
       <div id="speedMapDiv">000</div>
@@ -57,11 +58,11 @@
       <div id="tempMapUnitDiv">°C</div>
 
     </div>
-    <!-- Panel 3: Large Speed and Street Name Dash-->
+    <!-- Panel 3: Large Speed and Street Name Dash--
     <div id="panel3" style="display: none;">
       <div id="lgSpeed">000</div>
       <div id="lgSpeedUnit">MPH</div>
-      <!-- TACHO -->
+      <!-- TACHO -
       <div id="barTachlg">
        <div id="barTachMarkerlg"></div>
        <div id="rpmDivlg">00000</div>
@@ -69,7 +70,7 @@
      </div>
      <div id="address">123 Fake St </div>
     </div>
-     <!-- Panel 4: Splash Screen -->
+     <!-- Panel 4: Splash Screen
    <div id="panel4" style="display: none;">
      <div id="splashText">Waiting for Bsssike</div>
      <div id="logoDivSplash">
@@ -77,7 +78,7 @@
      </div>
      <div id="spinner"></div>
    </div>
-
+-->
 
 
 
