--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
       <!-- SPEED -->
       <div id="barSpeed">
         <div id="barSpeedMarker"></div>
-        <div id="speedDiv">000</div>
+        <div id="SpeedDiv">000</div>
         <div id="speedLabelDiv">MPH</div>
       </div>
       <!-- TEMP -->
