--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,23 @@
 <html>
   <head>
-    <title>MQTT Dash</title>
+
+    <title>Bike Dash</title>
     <!-- JQuery -->
     <script src="/js/jquery-1.11.3.min.js" type="text/javascript"></script>
-
     <script src="/js/jquery-ui.min.js" type="text/javascript"></script>
-    <!-- Google Maps -->
-  <!--  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js" type="text/javascript"></script> -->
+
     <!-- Google Fonts Orbitron-->
     <link href="/css/font.css" rel="stylesheet">
+
     <!-- Spin.js -->
     <script src="/js/spin.min.js" type="text/javascript"></script>
+
     <!-- Gauge CSS -->
     <link href="/css/style.css" rel="stylesheet">
+
     <!-- Gauge JS -->
     <script src="/js/gauge.js" type="text/javascript"></script>
+
   </head>
 
   <body onload="init();">
@@ -46,18 +49,6 @@
       <div id="clock"> </div>
     </div>
 
-<!--
-    <!-- Panel 2: Map Dash --
-    <div id="panel2" style="display: none;">
-      <div id="map-canvas"/></div>
-      <div id="speedMapDiv">000</div>
-      <div id="speedMapUnitDiv">MPH</div>
-      <div id="rpmMapDiv"> 00000</div>
-      <div id="rpmMapUnitDiv">RPM</div>
-      <div id="tempMapDiv">000</div>
-      <div id="tempMapUnitDiv">°C</div>
-
-    </div>
     <!-- Panel 3: Large Speed and Street Name Dash--
     <div id="panel3" style="display: none;">
       <div id="lgSpeed">000</div>
@@ -69,18 +60,7 @@
        <div id="rpmLabelDivlg">RPM</div>
      </div>
      <div id="address">123 Fake St </div>
-    </div>
-     <!-- Panel 4: Splash Screen
-   <div id="panel4" style="display: none;">
-     <div id="splashText">Waiting for Bsssike</div>
-     <div id="logoDivSplash">
-       <img src=/img/hornet-logo.jpg />
-     </div>
-     <div id="spinner"></div>
-   </div>
--->
-
-
+   </div> -->
 
   </body>
 </html>
